add unit test for service and dao layer